fix logo alignment

--- a/assets/css/bootstrap/_navbar.scss
+++ b/assets/css/bootstrap/_navbar.scss
@@ -32,6 +32,7 @@
   padding-top: .25rem;
   padding-bottom: .25rem;
   margin-right: $navbar-padding-x;
+  margin-left: $navbar-padding-x;
   font-size: $font-size-lg;
   line-height: inherit;
   white-space: nowrap;
